--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,128 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(197, 197, 197);
 }
-
+p{
+  margin: 0;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.flex{
+  flex:1;
+}
+
+.nav .wrapper{
+  position: fixed;
+  top:0;
+  text-align: center;
+  width: 100%;
+  height: 40px;
+  background:rgb(88, 92, 153);
+  display: flex;
+  padding: 10px;
+}
+.nav .title{
+  font-size: 20pt;
+  color: white;
+}
+.main{
+  margin-top: 60px;
+}
+.main .wrapper{
+  padding: 10px;
+  height: 100%;
+  text-align: center;
+}
+.single-app-nav .wrapper{
+  display: flex;
+  background:rgb(179, 184, 255);
+  
+  height: 30px;
+  width: 335px;
+  /* padding: 10px; */
+  
+  color: white;
+  font-weight: bold;
+  font-size: 15pt;
+
+}
+
+.wrapper.dragging{
+  background: rgb(88, 92, 153);
+}
+
+.mini-dragging{
+  background: red;
+}
+
+.single-app{
+  display: inline-block;
+  /* background: red; */
+  flex: 1;
+}
+.single-app-nav .flex:nth-child(1){
+  text-align: left;
+}
+.single-app-nav .flex:nth-child(2){
+  text-align: center;
+}
+.single-app-nav .flex:nth-child(3){
+  text-align: right;
+}
+.single-app-main .wrapper{
+  background: white;
+  height: 220px;
+  width: 355px;
+  padding: 0;
+  border-radius: 0 0 30px 0;
+}
+.separator{
+  display: flex;
+  justify-content: center;
+}
+.line{
+  border-radius: 5px;
+  width: 60px;
+  height: 5px;
+  background: white;
+  margin: 20px 0;
+}
+.drag{
+  cursor: move ;
+}
+.pinned{
+  opacity: 0.3;
+  cursor: default;
+}
+.rotate{
+  transform: rotate(-45deg)
+}
+.collapsed{
+  transform: rotate(180deg)
+}
+.side-drawer{
+  z-index: 5000;
+  position: fixed;
+  background: red;
+  height: 100vh;
+  width: 100px;
+}
+
+.mini-app .wrapper{
+  height: 80px;
+  width: 80px;
+  background: white;
+  /* border: 3px solid lightgray; */
+  border-radius: 0 0 20px 0;
+  margin: 10px 0;
+  color: black;
+  cursor: pointer;
+}
+.wrapper.active { 
+  outline: 1px solid rgb(231, 232, 253);
+  box-shadow: 1px 5px 10px white;
+  /* border-color: rgb(237, 238, 255); */
 }
